9_observability/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-route-public
spec:
  hosts:
    - grafana.taeho.io
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
