9_observability/jaeger.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-route-public
spec:
  hosts:
    - jaeger.taeho.io
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 16686
