9_observability/servicegraph.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicegraph-route-public
spec:
  hosts:
    - servicegraph.taeho.io
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: servicegraph.istio-system.svc.cluster.local
            port:
              number: 8088
