9_observability/telemetry-gateway.yaml
# https://github.com/istio/istio/issues/9247#issuecomment-428711547

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-services-telemetry-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15431
        name: http2-jaeger
        protocol: HTTP2
      hosts:
        - "*"
    - port:
        number: 15432
        name: http2-kiali
        protocol: HTTP2
      hosts:
        - "*"
    - port:
        number: 15433
        name: http2-servicegraph
        protocol: HTTP2
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger-query
  namespace: istio-system
spec:
  host: jaeger-query.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servicegraph
  namespace: istio-system
spec:
  host: servicegraph.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telemetry-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-telemetry-gateway
  http:
    - match:
        - port: 15431
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 16686
    - match:
        - port: 15431
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 20001
    - match:
        - port: 15431
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 8088
